tests/ui/borrowck/borrowck-lend-flow-if.stderr
error[E0502]: cannot borrow `*v` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-lend-flow-if.rs:29:16
   |
LL |         _w = &v;
   |              -- immutable borrow occurs here
LL |     }
LL |     borrow_mut(&mut *v);
   |                ^^^^^^^ mutable borrow occurs here
LL |     _w.use_ref();
   |     ------------ immutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
